Fix highlights overlap

--- a/blogoosfero/style.scss
+++ b/blogoosfero/style.scss
@@ -766,7 +766,7 @@ body {
 .highlights-label {
   padding: 10px;
   padding-bottom: 0px;
-  margin-bottom: -5px;
+  margin-bottom: 2px;
   font-size: 14px;
 }
 
